test/end-to-end/compile-errors/extern-unnecessary-library-name.crow
main void()
	()

f flags c extern
r record c extern
u union(x) c extern
